# types/serviceImage.go
@@ -2,13 +2,8 @@ package types
 
 // ServiceImage contains the basic information for services declaration
 type ServiceImage struct {
-	ImageName string      `json:"imageName" yaml:"imageName"`
-	Args      []*Variable `json:"args" yaml:"args"`
-	TTY       bool        `json:"tty" yaml:"tty"`
-}
-
-// Variable defines the variable and its requirement need
-type Variable struct {
-	Name     string `yaml:"name"`
-	Required bool   `yaml:"required"`
+	ImageName   string   `json:"imageName" yaml:"imageName"`
+	Args        []string `json:"args" yaml:"args"`
+	Environment []string `json:"environment" yaml:"environment"`
+	TTY         bool     `json:"tty" yaml:"tty"`
 }
